Add some NFSD insignia to the ship's exterior

--- a/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
@@ -1052,6 +1052,23 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.5,2.5
       parent: 1
+- proto: SignNfsd
+  entities:
+  - uid: 173
+    components:
+    - type: Transform
+      pos: -2.5,1.5
+      parent: 1
+  - uid: 174
+    components:
+    - type: Transform
+      pos: 3.5,1.5
+      parent: 1
+  - uid: 175
+    components:
+    - type: Transform
+      pos: 0.5,-4.5
+      parent: 1
 - proto: SinkStemlessWater
   entities:
   - uid: 92
