more tags for recycler

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -72,6 +72,9 @@
       - Trash
       - Recyclable
       - Cartridge # Bullets
+      - Book
+      - Pen
+      - Handcuffs
     blacklist:
       components:
       - Material
