--- a/Resources/Prototypes/Entities/Objects/Misc/inflatable_wall.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/inflatable_wall.yml
@@ -38,6 +38,7 @@
     anchored: true
   placement:
     mode: SnapgridCenter
+  - type: ConstructionMaterials # Frontier
 
 - type: entity
   id: InflatableDoor
@@ -83,3 +84,4 @@
     doAfter: 3
   - type: Occluder
     enabled: false
+  - type: ConstructionMaterials # Frontier
