--- a/Resources/Prototypes/Entities/Structures/Walls/girders.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/girders.yml
@@ -116,7 +116,7 @@
       graph: ClockworkGirder
       node: clockGirder
     - type: StaticPrice
-      price: 25 # Frontier: 75<25 - TODO: tests at 35
+      price: 75
     - type: Destructible
       thresholds:
         - trigger:
