--- a/Resources/Maps/Corvax/Shuttles/Aurora.yml
+++ b/Resources/Maps/Corvax/Shuttles/Aurora.yml
@@ -2071,6 +2071,481 @@ entities:
     - type: Transform
       pos: -1.5,-23.5
       parent: 2
+  - uid: 1673
+    components:
+    - type: Transform
+      pos: 7.5,2.5
+      parent: 2
+  - uid: 1674
+    components:
+    - type: Transform
+      pos: -6.5,-22.5
+      parent: 2
+  - uid: 1675
+    components:
+    - type: Transform
+      pos: -7.5,-22.5
+      parent: 2
+  - uid: 1676
+    components:
+    - type: Transform
+      pos: -9.5,-21.5
+      parent: 2
+  - uid: 1677
+    components:
+    - type: Transform
+      pos: -10.5,-20.5
+      parent: 2
+  - uid: 1678
+    components:
+    - type: Transform
+      pos: -10.5,-1.5
+      parent: 2
+  - uid: 1679
+    components:
+    - type: Transform
+      pos: -10.5,-0.5
+      parent: 2
+  - uid: 1680
+    components:
+    - type: Transform
+      pos: -10.5,0.5
+      parent: 2
+  - uid: 1681
+    components:
+    - type: Transform
+      pos: -10.5,3.5
+      parent: 2
+  - uid: 1682
+    components:
+    - type: Transform
+      pos: -10.5,2.5
+      parent: 2
+  - uid: 1683
+    components:
+    - type: Transform
+      pos: -10.5,1.5
+      parent: 2
+  - uid: 1684
+    components:
+    - type: Transform
+      pos: -9.5,3.5
+      parent: 2
+  - uid: 1685
+    components:
+    - type: Transform
+      pos: -9.5,2.5
+      parent: 2
+  - uid: 1686
+    components:
+    - type: Transform
+      pos: -9.5,1.5
+      parent: 2
+  - uid: 1687
+    components:
+    - type: Transform
+      pos: -9.5,0.5
+      parent: 2
+  - uid: 1688
+    components:
+    - type: Transform
+      pos: -9.5,-0.5
+      parent: 2
+  - uid: 1689
+    components:
+    - type: Transform
+      pos: -9.5,-1.5
+      parent: 2
+  - uid: 1690
+    components:
+    - type: Transform
+      pos: -11.5,3.5
+      parent: 2
+  - uid: 1691
+    components:
+    - type: Transform
+      pos: -11.5,2.5
+      parent: 2
+  - uid: 1692
+    components:
+    - type: Transform
+      pos: -11.5,1.5
+      parent: 2
+  - uid: 1693
+    components:
+    - type: Transform
+      pos: -11.5,0.5
+      parent: 2
+  - uid: 1694
+    components:
+    - type: Transform
+      pos: -11.5,-0.5
+      parent: 2
+  - uid: 1695
+    components:
+    - type: Transform
+      pos: -11.5,-1.5
+      parent: 2
+  - uid: 1696
+    components:
+    - type: Transform
+      pos: -11.5,-2.5
+      parent: 2
+  - uid: 1697
+    components:
+    - type: Transform
+      pos: -11.5,-3.5
+      parent: 2
+  - uid: 1698
+    components:
+    - type: Transform
+      pos: -11.5,-4.5
+      parent: 2
+  - uid: 1699
+    components:
+    - type: Transform
+      pos: -8.5,2.5
+      parent: 2
+  - uid: 1700
+    components:
+    - type: Transform
+      pos: -8.5,1.5
+      parent: 2
+  - uid: 1701
+    components:
+    - type: Transform
+      pos: -8.5,0.5
+      parent: 2
+  - uid: 1702
+    components:
+    - type: Transform
+      pos: -8.5,-0.5
+      parent: 2
+  - uid: 1703
+    components:
+    - type: Transform
+      pos: -8.5,-1.5
+      parent: 2
+  - uid: 1704
+    components:
+    - type: Transform
+      pos: -7.5,2.5
+      parent: 2
+  - uid: 1705
+    components:
+    - type: Transform
+      pos: -7.5,1.5
+      parent: 2
+  - uid: 1706
+    components:
+    - type: Transform
+      pos: -7.5,0.5
+      parent: 2
+  - uid: 1707
+    components:
+    - type: Transform
+      pos: -7.5,-0.5
+      parent: 2
+  - uid: 1708
+    components:
+    - type: Transform
+      pos: -7.5,-1.5
+      parent: 2
+  - uid: 1709
+    components:
+    - type: Transform
+      pos: -6.5,0.5
+      parent: 2
+  - uid: 1710
+    components:
+    - type: Transform
+      pos: -5.5,0.5
+      parent: 2
+  - uid: 1711
+    components:
+    - type: Transform
+      pos: -4.5,0.5
+      parent: 2
+  - uid: 1712
+    components:
+    - type: Transform
+      pos: -3.5,0.5
+      parent: 2
+  - uid: 1713
+    components:
+    - type: Transform
+      pos: -3.5,-0.5
+      parent: 2
+  - uid: 1714
+    components:
+    - type: Transform
+      pos: -3.5,-1.5
+      parent: 2
+  - uid: 1715
+    components:
+    - type: Transform
+      pos: -4.5,-1.5
+      parent: 2
+  - uid: 1716
+    components:
+    - type: Transform
+      pos: -5.5,-1.5
+      parent: 2
+  - uid: 1717
+    components:
+    - type: Transform
+      pos: -6.5,-1.5
+      parent: 2
+  - uid: 1718
+    components:
+    - type: Transform
+      pos: -6.5,-0.5
+      parent: 2
+  - uid: 1719
+    components:
+    - type: Transform
+      pos: -5.5,-0.5
+      parent: 2
+  - uid: 1720
+    components:
+    - type: Transform
+      pos: -4.5,-0.5
+      parent: 2
+  - uid: 1721
+    components:
+    - type: Transform
+      pos: 8.5,2.5
+      parent: 2
+  - uid: 1722
+    components:
+    - type: Transform
+      pos: 9.5,2.5
+      parent: 2
+  - uid: 1723
+    components:
+    - type: Transform
+      pos: 10.5,2.5
+      parent: 2
+  - uid: 1724
+    components:
+    - type: Transform
+      pos: 9.5,4.5
+      parent: 2
+  - uid: 1725
+    components:
+    - type: Transform
+      pos: 10.5,4.5
+      parent: 2
+  - uid: 1726
+    components:
+    - type: Transform
+      pos: 9.5,3.5
+      parent: 2
+  - uid: 1727
+    components:
+    - type: Transform
+      pos: 10.5,3.5
+      parent: 2
+  - uid: 1728
+    components:
+    - type: Transform
+      pos: 11.5,4.5
+      parent: 2
+  - uid: 1729
+    components:
+    - type: Transform
+      pos: 11.5,3.5
+      parent: 2
+  - uid: 1730
+    components:
+    - type: Transform
+      pos: 11.5,2.5
+      parent: 2
+  - uid: 1731
+    components:
+    - type: Transform
+      pos: 12.5,4.5
+      parent: 2
+  - uid: 1732
+    components:
+    - type: Transform
+      pos: 13.5,4.5
+      parent: 2
+  - uid: 1733
+    components:
+    - type: Transform
+      pos: 13.5,3.5
+      parent: 2
+  - uid: 1734
+    components:
+    - type: Transform
+      pos: 12.5,3.5
+      parent: 2
+  - uid: 1735
+    components:
+    - type: Transform
+      pos: 12.5,2.5
+      parent: 2
+  - uid: 1736
+    components:
+    - type: Transform
+      pos: 13.5,2.5
+      parent: 2
+  - uid: 1737
+    components:
+    - type: Transform
+      pos: 12.5,-10.5
+      parent: 2
+  - uid: 1738
+    components:
+    - type: Transform
+      pos: 13.5,-10.5
+      parent: 2
+  - uid: 1739
+    components:
+    - type: Transform
+      pos: 14.5,-10.5
+      parent: 2
+  - uid: 1740
+    components:
+    - type: Transform
+      pos: 14.5,-11.5
+      parent: 2
+  - uid: 1741
+    components:
+    - type: Transform
+      pos: 14.5,-12.5
+      parent: 2
+  - uid: 1742
+    components:
+    - type: Transform
+      pos: 14.5,-13.5
+      parent: 2
+  - uid: 1743
+    components:
+    - type: Transform
+      pos: 14.5,-14.5
+      parent: 2
+  - uid: 1744
+    components:
+    - type: Transform
+      pos: 14.5,-15.5
+      parent: 2
+  - uid: 1745
+    components:
+    - type: Transform
+      pos: 14.5,-16.5
+      parent: 2
+  - uid: 1746
+    components:
+    - type: Transform
+      pos: 13.5,-11.5
+      parent: 2
+  - uid: 1747
+    components:
+    - type: Transform
+      pos: 13.5,-12.5
+      parent: 2
+  - uid: 1748
+    components:
+    - type: Transform
+      pos: 13.5,-13.5
+      parent: 2
+  - uid: 1749
+    components:
+    - type: Transform
+      pos: 13.5,-14.5
+      parent: 2
+  - uid: 1750
+    components:
+    - type: Transform
+      pos: 13.5,-15.5
+      parent: 2
+  - uid: 1751
+    components:
+    - type: Transform
+      pos: 13.5,-16.5
+      parent: 2
+  - uid: 1752
+    components:
+    - type: Transform
+      pos: 12.5,-11.5
+      parent: 2
+  - uid: 1753
+    components:
+    - type: Transform
+      pos: 12.5,-12.5
+      parent: 2
+  - uid: 1754
+    components:
+    - type: Transform
+      pos: 12.5,-13.5
+      parent: 2
+  - uid: 1755
+    components:
+    - type: Transform
+      pos: 12.5,-14.5
+      parent: 2
+  - uid: 1756
+    components:
+    - type: Transform
+      pos: 12.5,-15.5
+      parent: 2
+  - uid: 1757
+    components:
+    - type: Transform
+      pos: 12.5,-16.5
+      parent: 2
+  - uid: 1758
+    components:
+    - type: Transform
+      pos: 11.5,-11.5
+      parent: 2
+  - uid: 1759
+    components:
+    - type: Transform
+      pos: 11.5,-12.5
+      parent: 2
+  - uid: 1760
+    components:
+    - type: Transform
+      pos: 11.5,-13.5
+      parent: 2
+  - uid: 1761
+    components:
+    - type: Transform
+      pos: 11.5,-14.5
+      parent: 2
+  - uid: 1762
+    components:
+    - type: Transform
+      pos: 11.5,-15.5
+      parent: 2
+  - uid: 1763
+    components:
+    - type: Transform
+      pos: 11.5,-16.5
+      parent: 2
+  - uid: 1764
+    components:
+    - type: Transform
+      pos: 11.5,-17.5
+      parent: 2
+  - uid: 1765
+    components:
+    - type: Transform
+      pos: 7.5,-19.5
+      parent: 2
+  - uid: 1766
+    components:
+    - type: Transform
+      pos: 7.5,-20.5
+      parent: 2
+  - uid: 1767
+    components:
+    - type: Transform
+      pos: 8.5,-19.5
+      parent: 2
 - proto: AtmosFixShuttleNitrogenMarker
   entities:
   - uid: 1659
