--- a/Resources/Maps/_NF/Shuttles/Nfsd/wendigo.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wendigo.yml
@@ -768,7 +768,7 @@ entities:
     - type: Transform
       pos: 9.5,4.5
       parent: 1
-- proto: BaseAdvancedPen
+- proto: Pen
   entities:
   - uid: 471
     components:
