Пофиксил последнюю ошибку

--- a/Resources/Maps/Corvax/Shuttles/Aurora.yml
+++ b/Resources/Maps/Corvax/Shuttles/Aurora.yml
@@ -6436,6 +6436,7 @@ entities:
   - uid: 966
     components:
     - type: Transform
+      rot: 1.5707963267948966 rad
       pos: 3.5,1.5
       parent: 2
     - type: DeviceList
@@ -6445,9 +6446,9 @@ entities:
       - 384
       - 386
       - 380
+      - 662
       - 973
       - 974
-      - 662
   - uid: 968
     components:
     - type: Transform
