--- a/Resources/Prototypes/_NF/Shipyard/bodkin.yml
+++ b/Resources/Prototypes/_NF/Shipyard/bodkin.yml
@@ -12,7 +12,7 @@
   id: Bodkin
   name: SBB Bodkin
   description: The smaller sibling to the Broadhead, the SBB Bodkin is designed for rockhopping and salvage recovery.
-  price: 34000 #Grid appraises at 29500. Slapped on a 15% markup and rounded it up as it's a salvage ship.
+  price: 39000 #Grid appraises at 35693. Slapped on a ~10% markup.
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/bodkin.yml
